Fix negative letter spacing

--- a/website.css
+++ b/website.css
@@ -18,6 +18,7 @@ h3 {
   margin-left: 1%;
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: bold;
+  letter-spacing: -1px;
 }
 
 a {
